source branch - Hopefully fix lyrics button text on mobile

--- a/_sass/4-layouts/_release.scss
+++ b/_sass/4-layouts/_release.scss
@@ -92,6 +92,7 @@
   border: none;
   border-radius: $border-radius;
   width: 100%;
+  color: $dark;
   background-color: #e9e9ed; // firefox defauilt
   &:after {
     content: '\002B';
